--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,8 @@ body {
 
 
 a, a:visited {
-  text-decoration: none;
+  // text-decoration: underline
+  border-bottom: 1px dashed #aaa;
   color:$link-color;
 }
 
